# hello_world_haskell

./: hello.cabal  stack.yaml
exe/: Main.hs
